--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Aman Tripathi</title>
-
+    <script src="https://smtpjs.com/v3/smtp.js"></script>
     <link
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
     />
+    <script src="https://cdn.emailjs.com/sdk/2.3.2/email.min.js"></script>
 
     <!-- Custom CSS Styles -->
     <link rel="stylesheet" href="css/style.css" />
@@ -201,23 +202,39 @@
     <section class="contact" id="contact">
       <h2 class="heading">Contact <span>Me !</span></h2>
 
-      <form action="#">
+      <form action="#" id="contact-form">
         <div class="input-box">
-          <input type="text" placeholder="Full Name" />
-          <input type="email" placeholder="Email Address" />
+          <input type="text" placeholder="Full Name" id="name" required />
+          <input type="email" placeholder="Email Address" id="email" required />
         </div>
         <div class="input-box">
-          <input type="number" placeholder="Mobile Number" />
-          <input type="text" placeholder="Email Subject" />
+          <input
+            type="number"
+            placeholder="Mobile Number"
+            id="mobile"
+            required
+          />
+          <input
+            type="text"
+            placeholder="Email Subject"
+            id="subject"
+            required
+          />
         </div>
         <textarea
-          name=""
-          id=""
+          name="message"
+          id="message"
           cols="30"
           rows="10"
           placeholder="Your Message"
+          required
         ></textarea>
-        <input type="submit" value="Send Message" class="btn" />
+        <input
+          type="submit"
+          value="Send Message"
+          class="btn"
+          onclick="sendEmail(event)"
+        />
       </form>
     </section>
 
