--- a/index.html
+++ b/index.html
@@ -134,6 +134,28 @@
             Open
           </a>
         </div>
+        <div class="services-box">
+          <i class="bx bx-library"></i>
+          <h3>GeeksforGeeks</h3>
+          <a
+            href="https://auth.geeksforgeeks.org/user/amancselover"
+            target="_blank"
+            class="btn"
+          >
+            Open
+          </a>
+        </div>
+        <div class="services-box">
+          <i class="bx bxl-github"></i>
+          <h3>Github</h3>
+          <a
+            href="https://github.com/amantripathi038"
+            target="_blank"
+            class="btn"
+          >
+            Open
+          </a>
+        </div>
       </div>
     </section>
 
