--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <a href="#home" class="active">Home</a>
         <a href="#about">About</a>
         <a href="#coding">Coding Profiles</a>
-        <a href="#portfolio">Portfolio</a>
+        <a href="#projects">Projects</a>
         <a href="#contact">Contact</a>
       </nav>
     </header>
@@ -159,7 +159,7 @@
       </div>
     </section>
 
-    <section class="portfolio" id="portfolio">
+    <section class="portfolio" id="projects">
       <h2 class="heading">Latest <span>Projects</span></h2>
       <div class="portfolio-container">
         <div class="portfolio-box">
